Share screen added

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -27,6 +27,9 @@
         <div id="video-grid">
 
         </div>
+        <div style="width:80%;background: grey;margin: auto;">
+          <video id="video" autoplay playsinline muted></video>
+      </div>
       </div>
       <div class="options">
         <div class="options__left">
@@ -38,6 +41,9 @@
           </div>
           <div id="showChat" class="options__button">
             <i class="fa fa-comment"></i>
+          </div>
+          <div id="start" class="options__button">
+            <i class="fa fa-screencast"></i>
           </div>
         </div>
         <div class="options__right">
