Share screen added

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -27,7 +27,7 @@
         <div id="video-grid">
 
         </div>
-        <div style="width:80%;background: grey;margin: auto;">
+        <div style="width:80%;margin: auto;">
           <video id="video" autoplay playsinline muted></video>
       </div>
       </div>
