--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>videoChatApp</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
-    <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-    <script>
-      const ROOM_ID = "<%= roomId %>";
-    </script>
-  </head>
-  <body>
-    <div class="header">
-      <div class="logo">
-        <div class="header__back">
-          <i class="fas fa-angle-left"></i>
-        </div>
-        <h3>Video Chat</h2>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>videoChatApp</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
+  <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+  <!-- Option 1: Include in HTML -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <script>
+    const ROOM_ID = "<%= roomId %>";
+  </script>
+</head>
+
+<body>
+  <div class="header">
+    <div class="logo">
+      <div class="header__back">
+        <i class="fas fa-angle-left"></i>
       </div>
-    </div>  
-    <div class="main">  
+      <h3>Video Chat</h2>
+    </div>
+  </div>
+  <div class="main">
     <div class="main__left">
       <div class="videos__group">
         <div id="video-grid">
@@ -29,7 +33,7 @@
         </div>
         <div style="width:100%;margin: auto;">
           <video id="video" autoplay playsinline muted></video>
-      </div>
+        </div>
       </div>
       <div class="options">
         <div class="options__left">
@@ -43,7 +47,7 @@
             <i class="fa fa-comment"></i>
           </div>
           <div id="start" class="options__button">
-            <i class="fa fa-screencast"></i>
+            <i class="bi bi-broadcast"></i>
           </div>
         </div>
         <div class="options__right">
@@ -55,9 +59,9 @@
     </div>
     <div class="main__right">
       <div class="main__chat_window">
-          <div class="messages">
+        <div class="messages">
 
-          </div>
+        </div>
       </div>
       <div class="main__message_container">
         <input id="chat_message" type="text" autocomplete="off" placeholder="Type message here...">
@@ -67,6 +71,7 @@
       </div>
     </div>
   </div>
-  </body>
-  <script src="script.js"></script>
+</body>
+<script src="script.js"></script>
+
 </html>
