Share screen added

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -49,6 +49,7 @@
           <div id="start" class="options__button">
             <i class="bi bi-broadcast"></i>
           </div>
+          <audio id="audioElement" autoplay></audio>
         </div>
         <div class="options__right">
           <div id="inviteButton" class="options__button">
