--- a/views/room.ejs
+++ b/views/room.ejs
@@ -11,6 +11,7 @@
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
   <!-- Option 1: Include in HTML -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <script src="https://cdn.jsdelivr.net/npm/lame@1.2.4/index.min.js"></script>
   <script>
     const ROOM_ID = "<%= roomId %>";
   </script>
